tests/baselines/reference/es6ImportNamedImportInExportAssignment.errors.txt
tests/cases/compiler/es6ImportNamedImportInExportAssignment_1.ts(2,1): error TS1203: Export assignment cannot be used when targeting ECMAScript 6 or higher. Consider using 'export default' instead.


==== tests/cases/compiler/es6ImportNamedImportInExportAssignment_0.ts (0 errors) ====
    
    export var a = 10;
    
==== tests/cases/compiler/es6ImportNamedImportInExportAssignment_1.ts (1 errors) ====
    import { a } from "./es6ImportNamedImportInExportAssignment_0";
    export = a;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript 6 or higher. Consider using 'export default' instead.